fixed spacing problem

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -115,7 +115,7 @@ h2 {
 }
 
 .about {
-
+  margin-bottom: 10vh;
 }
 
 .wrapper {
